@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-19T01:46:31Z",
+  "timestamp" : "2022-10-19T08:33:16Z",
   "count_outdated" : 591,
   "uniques_outdated" : 338,
-  "count" : 625,
-  "uniques" : 359,
+  "count" : 626,
+  "uniques" : 360,
   "clones" : [
     {
       "timestamp": "2022-10-09T00:00:00Z",
@@ -74,6 +74,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-10-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
