@@ -1,5 +1,5 @@
 {
-  "count": 34,
+  "count": 35,
   "uniques": 12,
   "clones": [
     {
@@ -51,6 +51,11 @@
       "timestamp": "2022-10-18T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
